{
    "name": "Controls",
    "maps": [
        {
            "name": "UserInput",
            "id": "74d16a21-7831-4640-85eb-728ea7a58fa6",
            "actions": [
                {
                    "name": "DeltaMouse",
                    "type": "PassThrough",
                    "id": "d6101631-1541-4dd5-827e-d966239b3eb2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamRotationActivator",
                    "type": "Button",
                    "id": "138845e7-74ae-42b6-9b12-0e9b54b35ef8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "MapMoving",
                    "type": "Button",
                    "id": "6066f92d-03ff-4434-93cc-41a2e6cbd0e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5128dfde-59fd-4c68-8c4f-b8efb913f7b5",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DeltaMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60becb7d-447e-4348-916b-6e715822c4ba",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MapMoving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Right Mouse Button + Shift",
                    "id": "a828fe1d-4269-46b1-9585-7ab58cb38bb8",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamRotationActivator",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "aadd2adb-d267-466f-ba5f-c95984d2caa8",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CamRotationActivator",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "17ba8aaa-f58b-4fb9-a6cb-f34581d15caa",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CamRotationActivator",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "SelectionMode",
            "id": "dae7d933-da4f-49c3-8201-759e28c09ec7",
            "actions": [
                {
                    "name": "Multiselect",
                    "type": "Button",
                    "id": "68c556fe-e9de-440c-9edc-e7db30d0736c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldSelection",
                    "type": "Button",
                    "id": "fc1494f1-81b3-4205-8c06-5e4c13447ba6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.3)",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "025d3c85-d0ae-4b4f-925f-566824a2c4da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Delete",
                    "type": "Button",
                    "id": "f1ca7810-1539-42e6-b30e-8160b5c667b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "AlterMotion",
                    "type": "Button",
                    "id": "eb8ce0ad-6a20-4561-a9cc-d5d046c2921f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e9e04f6e-6fc0-4d9b-93a4-78b37f809069",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "385b073e-2544-4c4a-8407-ef03380afafa",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Delete",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2cd212f-078d-4fcb-aa47-c312d1f244db",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82adefaf-5ebd-4a6c-a2d8-8440204c7ec1",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "AlterMotion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1efbd2e4-7838-497d-b9ec-ad756515b450",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Multiselect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "EditorMode",
            "id": "c49a7fa6-2844-47f7-9fb7-3abe4fca95ce",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "86664c0d-3187-44ef-8529-c1b12a9d700c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3c356065-d3da-47c8-beb7-0afc96416297",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        }
    ]
}